--- a/2- poluindo_html_com_javascript.html
+++ b/2- poluindo_html_com_javascript.html
@@ -8,12 +8,10 @@
 </body>
 
 <script>
-
-  // O JavaScript fica aqui
-
+  
 function criarParagrafo() {
   let para = document.createElement('p');
-  para.textContent = 'Você clicou no botão!';
+  para.textContent = 'VocÃª clicou no botÃ£o!';
   document.body.appendChild(para);
 }
 
