Alguns ajustes de sintaxe e comentários adicionados

--- a/10- estacao_trem.html
+++ b/10- estacao_trem.html
@@ -2,7 +2,7 @@
 
 <body>
 	<div>
-		<p>Cidadezinhas</p>
+		<h1>Estações</h1>
 		
 		<ol class="estacoes">
 		
@@ -15,18 +15,21 @@
 <script>
 var list = document.querySelector('.estacoes');
 
-var stations = ['MAN675847583748sjt567654;Manchester Piccadilly',
-                'GNF576746573fhdg4737dh4;Greenfield',
-                'LIV5hg65hd737456236dch46dg4;Liverpool Lime Street',
-                'SYB4f65hf75f736463;Stalybridge',
-                'HUD5767ghtyfyr4536dh45dg45dg3;Huddersfield'];
+var stations = ['MAN675847583748sjt567654; Manchester Piccadilly',
+                'GNF576746573fhdg4737dh4; Greenfield',
+                'LIV5hg65hd737456236dch46dg4; Liverpool Lime Street',
+                'SYB4f65hf75f736463; Stalybridge',
+                'HUD5767ghtyfyr4536dh45dg45dg3; Huddersfield'];
 
+//Analisa as strings da array 'stations' e armazena em uma variável os três primeiros caracteres.
+//Armazena em outra variável tudo o que está escrito após o ';'
 for (var i = 0; i < stations.length; i++) {
 	var input = stations[i];
 	var codeStation = input.slice(0,3);
 	var refer = input.indexOf(";");
 	var nameStation = input.slice(refer + 1);
 	
+//Junta as duas variáveis para formar uma lista com siglas e nomes das estações.	
 	var result = codeStation + ": " + nameStation;
 	var listItem = document.createElement('li');
 	listItem.textContent = result;
