--- a/12- buscadores.html
+++ b/12- buscadores.html
@@ -51,7 +51,7 @@ searchBtn.onclick = function() {
 
     }
 
-//Limoa o valor digitado e coloca o foco no campo para digitar os valores.	
+//Limpa o valor digitado e coloca o foco no campo para digitar os valores.	
     searchInput.value = '';
     searchInput.focus();
   }
