--- a/13- Histórias bobas/index.html
+++ b/13- Histórias bobas/index.html
@@ -39,17 +39,16 @@
 
   <body>
     <div>
-      <label for="customname">Enter custom name:</label>
+      <label for="customname">Digite um nome:</label>
       <input id="customname" type="text" placeholder="">
     </div>
     <div>
-      <label for="us">US</label><input id="us" type="radio" name="ukus" value="us" checked>
-      <label for="uk">UK</label><input id="uk" type="radio" name="ukus" value="uk">
+      <label for="us">BR</label><input id="br" type="radio" name="ukbr" value="br" checked>
+      <label for="uk">UK</label><input id="uk" type="radio" name="ukbr" value="uk">
     </div>
     <div>
-      <button class="randomize">Generate random story</button>
+      <button class="randomize">Gerar história aleatória</button>
     </div>
-    <!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
     <p class="story"></p>
     
 
